--- a/html/downTask.html
+++ b/html/downTask.html
@@ -14,7 +14,7 @@
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
 	<script src="../config/web/config.js"></script>
-	<script src="../lib/app/task/app.js"></script>
+	<script src="../lib/app/downTask/app.js"></script>
 	<style>
 		#wrapper {
 			position: fixed;
@@ -34,7 +34,7 @@
 				</ul>				
 			</div>
 			<div id="taskList">
-				<div id="wrapper" style="display: none;width: 98%;">
+				<div id="wrapper" style="display: none;">
 					<div id="scroller" >
 						<div>
 						<br/>
