--- a/html/aqscLeftPage.html
+++ b/html/aqscLeftPage.html
@@ -6,11 +6,11 @@
     <div data-role="content" id="listContent" style="text-align: center;">
     	<table  cellspacing="0.1" align="center" style="width:90%;font-size: 110%;">    	
     	  <tr bordercolor="white" >
-    	  <td colspan="3" >集团公司安全生产委员会</td>
+    	  <td colspan="3" style="font-size:20px">集团公司安全生产委员会</td>
     	  </tr>
     	  <tr>
-    	  <td width="25%">主任:</td>
-    	  <td width="25%">李谠</td>
+    	  <td width="25%">主　任:</td>
+    	  <td width="25%">李　谠</td>
     	  <td>集团公司总经理</td>
     	  </tr>
     	  <tr>
