对安全生产右侧表格字体的调整

--- a/html/aqscLeftPage.html
+++ b/html/aqscLeftPage.html
@@ -69,7 +69,7 @@
     	  <td>总务部、物业公司总经理</td>
     	  </tr>
     	  <tr>
-    	  <td colspan="3">集团公司安委会联系方式 </td>
+    	  <td colspan="3" style="font-size:20px">集团公司安委会联系方式 </td>
     	  </tr>
     	  <tr>
     	  <td>电话： </td>
