修改首页左侧图表列样式改变

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -43,7 +43,7 @@ text-indent:0em;
                     ui-li-has-arrow ui-li ui-first-child ui-btn-hover-c"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text left_module" style="text-align: center;margin-top: 0px;">
-							<p ><a onclick="loadMiddleContent()" class="ui-link-inherit"><img
+							<p class="pdis"><a onclick="loadMiddleContent()" class="ui-link-inherit"><img
 								src="../assets/home/sy.png" class="icon" /></a></p>
 								 <p class="pdis" style="margin-bottom: 0px;"> <span>首页</span>
 						</div>
@@ -53,7 +53,7 @@ text-indent:0em;
 					data-theme="c" class="ui-btn  ui-li-has-arrow ui-li ui-btn-up-c"><div
 						class="ui-btn-inner ui-li" id="gwdb" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
-						<p style="margin-top: 0px;>	<a onclick="loadTask()" class="ui-link-inherit"><img
+						<p style="margin-top: 0px;"class="pdis">	<a onclick="loadTask()" class="ui-link-inherit"><img
 								src="../assets/home/gwdb.png" class="icon" /></a></p> 
 								<p class="pdis" style="margin-bottom: 0px;"> <span>公文待办</span></p>
 						</div>
@@ -64,7 +64,7 @@ text-indent:0em;
 					class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li ui-last-child"><div
 						class="ui-btn-inner ui-li" id="gwcy" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
-						<p style="margin-top: 0px;>	<a onclick="loadqueryList()" href="#" class="ui-link-inherit"><img
+						<p style="margin-top: 0px;"class="pdis">	<a onclick="loadqueryList()" href="#" class="ui-link-inherit"><img
 								src="../assets/home/gwcy.png" class="icon" /></a> </p>
 								<p class="pdis" style="margin-bottom: 0px;"> <span>公文查阅</span></p>
 						</div>
@@ -74,7 +74,7 @@ text-indent:0em;
 					data-theme="c" class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li" id="jysj" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
-						<p style="margin-top: 0px;>	<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img
+						<p style="margin-top: 0px;"class="pdis">	<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img
 								src="../assets/home/jysj.png" class="icon" /></a></p>
 								 <p class="pdis" style="margin-bottom: 0px;"><span>经营数据</span></p>
 						</div>
@@ -84,7 +84,7 @@ text-indent:0em;
 					data-theme="c" class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li" id="aqsc" style="">
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
-							<p style="margin-top: 0px;><a href="#" onClick="loadAqscList()" class="ui-link-inherit"><img
+							<p style="margin-top: 0px;" class="pdis"><a href="#" onClick="loadAqscList()" class="ui-link-inherit"><img
 								src="../assets/home/aqsc.png" class="icon" /></a></p>
 								 <p class="pdis" style="margin-bottom: 0px;"> <span>安全生产</span></p>
 						</div>
@@ -94,7 +94,7 @@ text-indent:0em;
 					data-theme="c" class="ui-btn ui-btn-up-c  ui-li-has-arrow ui-li"><div
 						class="ui-btn-inner ui-li">
 						<div class="ui-btn-text  left_module" style="text-align: center;">
-							<p style="margin-top: 0px;><a href="#" onClick="loadDzqkList()" class="ui-link-inherit"><img
+							<p style="margin-top: 0px;" class="pdis"><a href="#" onClick="loadDzqkList()" class="ui-link-inherit"><img
 								src="../assets/home/dzqk.png" class="icon" /></a></p>
 								 <p class="pdis" style="margin-bottom: 0px;"><span>电子期刊</span></p>
 						</div>
