* 修复电子期刊无法打开问题

--- a/html/periodical.html
+++ b/html/periodical.html
@@ -81,8 +81,8 @@
 		localStorage.setItem("attachmentUrl", url);
 		$.hori
 				.loadPage(
-						$.hori.getconfig().appServerHost
-								+ "viewhome/html/attachmentShowForm.html?data-application=mobile",
+						$.hori.getconfig().serverBaseUrl
+								+ "viewhome/html/attachmentShowForm.html",
 						"viewhome/xml/AttachView.xml");
 	}
 	function renderDetail() {
