--- a/html/ipad.html
+++ b/html/ipad.html
@@ -30,6 +30,9 @@
 .pdis{
 text-indent:0em;
 }
+.wzs{
+ font-size: 15px;
+}
 </style>
 <body class="ui-mobile-viewport ui-overlay-c"
 	style="overflow-y: hidden;">
@@ -45,7 +48,7 @@ text-indent:0em;
 						<div class="ui-btn-text left_module" style="text-align: center;margin-top: 0px;">
 							<p class="pdis"><a onclick="loadMiddleContent()" class="ui-link-inherit"><img
 								src="../assets/home/sy.png" class="icon" /></a></p>
-								 <p class="pdis" style="margin-bottom: 0px;"> <span>首页</span>
+								 <p class="pdis" style="margin-bottom: 0px;"> <span class="wzs" >首页</span>
 						</div>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
@@ -55,7 +58,7 @@ text-indent:0em;
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
 						<p style="margin-top: 0px;"class="pdis">	<a onclick="loadTask()" class="ui-link-inherit"><img
 								src="../assets/home/gwdb.png" class="icon" /></a></p> 
-								<p class="pdis" style="margin-bottom: 0px;"> <span>公文待办</span></p>
+								<p class="pdis" style="margin-bottom: 0px;"> <span class="wzs">公文待办</span></p>
 						</div>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
@@ -66,7 +69,7 @@ text-indent:0em;
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
 						<p style="margin-top: 0px;"class="pdis">	<a onclick="loadqueryList()" href="#" class="ui-link-inherit"><img
 								src="../assets/home/gwcy.png" class="icon" /></a> </p>
-								<p class="pdis" style="margin-bottom: 0px;"> <span>公文查阅</span></p>
+								<p class="pdis" style="margin-bottom: 0px;"> <span class="wzs">公文查阅</span></p>
 						</div>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
@@ -76,7 +79,7 @@ text-indent:0em;
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
 						<p style="margin-top: 0px;"class="pdis">	<a onclick="loadMiddleBIContent()" class="ui-link-inherit"><img
 								src="../assets/home/jysj.png" class="icon" /></a></p>
-								 <p class="pdis" style="margin-bottom: 0px;"><span>经营数据</span></p>
+								 <p class="pdis" style="margin-bottom: 0px;"><span class="wzs">经营数据</span></p>
 						</div>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
@@ -86,7 +89,7 @@ text-indent:0em;
 						<div class="ui-btn-text  left_module" style="text-align: center; margin-top: 0px;">
 							<p style="margin-top: 0px;" class="pdis"><a href="#" onClick="loadAqscList()" class="ui-link-inherit"><img
 								src="../assets/home/aqsc.png" class="icon" /></a></p>
-								 <p class="pdis" style="margin-bottom: 0px;"> <span>安全生产</span></p>
+								 <p class="pdis" style="margin-bottom: 0px;"> <span class="wzs">安全生产</span></p>
 						</div>
 					</div></li>
 				<li data-corners="false" data-shadow="false" data-iconshadow="true"
@@ -96,7 +99,7 @@ text-indent:0em;
 						<div class="ui-btn-text  left_module" style="text-align: center;">
 							<p style="margin-top: 0px;" class="pdis"><a href="#" onClick="loadDzqkList()" class="ui-link-inherit"><img
 								src="../assets/home/dzqk.png" class="icon" /></a></p>
-								 <p class="pdis" style="margin-bottom: 0px;"><span>电子期刊</span></p>
+								 <p class="pdis" style="margin-bottom: 0px;"><span class="wzs">电子期刊</span></p>
 						</div>
 					</div></li>
 
@@ -135,7 +138,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div class="" id="rightContent" style="overflow: scroll;position:relative; height: 35em;margin-top:3%; position: fixed ;top: 7%;right:5px;">
+		<div class="" id="rightContent" style="overflow: scroll;position:relative; height: 29.5em;margin-top:3%; position: fixed ;top: 7%;right:5px;">
 			
 		</div>
 	</div>
