--- a/html/listDetailsForAQSC.html
+++ b/html/listDetailsForAQSC.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
+	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
 <script src="../lib/jquery/jquery.min.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
@@ -22,12 +23,11 @@
 						$.hori.setHeaderTitle("安全生产值班表详情");
 						var config = $.hori.getconfig();
 						var docunid = localStorage.getItem("watchDocUnid");
-						var serverUrl = $.hori.getconfig().appServerHost
-								+ "view/safety/detail";
+						var serverUrl = $.hori.getconfig().appServerHost;
 						var dataSource = "/Application/Safety/SafetyProBasic.nsf/loadAppContentForMobile?openagent&data-result=text"
 						serverUrl = serverUrl + dataSource;
 						$.hori.ajax({
-							"type" : "post",
+							"type" : "get",
 							"url" : serverUrl,
 							"dataType" : "json",
 							"data" : {
@@ -40,6 +40,7 @@
 								$.hori.hideLoading();
 							},
 							"error" : function(res) {
+								alert("error"+res);
 								$.hori.hideLoading();
 							}
 						});
@@ -52,9 +53,9 @@
 </script>
 </head>
 <body>
-	<div>
+	
 		<div id="notice" data-role="page" data-url="notice" tabindex="0"
-			class="ui-page ui-body-c ui-page-active" style="min-height: 302px;">
+			class="ui-page ui-body-c ui-page-active" style="min-height: 302px; height:100%;">
 			<div data-role="content" align="center" class="ui-content"
 				role="main">
 				<div data-role="content" class="ui-content" role="main" id='divO' style='font-weight: bold;'>
@@ -112,6 +113,5 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </body>
 </html>
