调整登陆页面登录、取消按钮的位置

--- a/html/login.html
+++ b/html/login.html
@@ -364,7 +364,7 @@ a {
 					</div>
 				</li>
 			</ul>
-			<div class="ui-grid-a">
+			<div style='width: 419px;' class="ui-grid-a">
 				<div class="ui-block-a">
 					<a href="javascript:void(0)" onclick="login()" data-theme="f" data-role="button" data-icon="check">&nbsp;登&nbsp;录&nbsp;</a>
 				</div>
@@ -374,7 +374,7 @@ a {
 				</div>
 			</div>
 			<div>
-				<div style="float: right; margin-top: 5px;">
+				<div style="float: right; margin-top: 5px; margin-right: 275px">
 					<a href="javascript:void(0)" onclick="guide()" data-theme="f">首次登录向导</a>
 				</div>
 			</div>
