--- a/html/forgetPwd.html
+++ b/html/forgetPwd.html
@@ -23,9 +23,9 @@ a {
 	$(document).ready(function() {
 		var hori = $.hori;
 		try {
-			hori.setHeaderTitle("重置密码");
+			hori.setHeaderTitle("忘记密码");
 			/*隐藏后退按钮*/
-			hori.hideBackBtn();
+			//hori.hideBackBtn();
 		} catch (e) {
 			alert(e.message);
 		}
@@ -37,7 +37,7 @@ a {
 		var username = $.trim($("#user_name").val());
 		var number = $("#id_number").val();
 		if (username == "") {
-			alert("请输入账号!");
+			alert("请输入用户名!");
 			return;
 		}
 		if (un_name == "") {
@@ -48,19 +48,25 @@ a {
 			alert("请输入身份证号!");
 			return;
 		}
-		var url = $.hori.getconfig().appServerHost + "view/forgetwd/loginvalidate1/resetPWsendSMS"
+		var url = $.hori.getconfig().appServerHost + "view/forgetpwd/sendSms/resetPWsendSMS?data-result=text";
 		$.hori.ajax({
 			"type" : "get",
 			"url" : url,
-			"headers":{
-				"Access-Control-Allow-Origin": true
-			},
 			"data" : $('#forgetPwdForm').serialize(),
 			"success" : function(res) {
-			    alert(res);
+			    //alert("res1=="+res);
+			    var result = JSON.parse(res);
+			    if(result.rtn_code == '2000'){
+			    	var number = result.mobile_number.substring(7);
+			    	$("#mobile_number").val(result.mobile_number);
+			    	alert("短信验证码已发送到尾号" + number + "的手机，请查收");
+			    }else{
+			    	alert(result.rtn_msg.replace(", TIM",""));
+			    }
+			    console.log("getMsg=="+res);
 			},
 			"error" : function(res) {
-				alert(res + "222");
+				alert(res);
 				$.hori.hideLoading();
 			}
 		})
@@ -70,7 +76,7 @@ a {
 		var username = $.trim($("#user_name").val());
 		var number = $("#id_number").val();
 		if (username == "") {
-			alert("请输入账号!");
+			alert("请输入用户名!");
 			return;
 		}
 		if (un_name == "") {
@@ -81,12 +87,19 @@ a {
 			alert("请输入身份证号!");
 			return;
 		}
+		if (number == "") {
+			alert("请输入短信验证码!");
+			return;
+		}
 		$.hori.showLoading();
 		try {
+			/* document.getElementById("mobile_number").value="12345678909";
+			document.getElementById("imageCode").value="1231"; */
 			var random = new Date().getTime();
 			var url = $.hori.getconfig().appServerHost
-					+ "view/forgetwd/loginvalidate2/resetPWsubmit";
-			url = url + "?data-random=" + random;
+					+ "view/forgetpwd/resetSubmit/resetPWsubmit?data-result=text";
+			url = url + "&data-random=" + random;
+			
 		} catch (e) {
 		}
 		$.hori.ajax({
@@ -94,44 +107,21 @@ a {
 			"url" : url,
 			"data" :  $("#forgetPwdForm").serialize(),
 			"success" : function(res) {
-				alert(res);
-			},
-			"error" : function(res) {
-				alert(res + "222");
-				$.hori.hideLoading();
-			}
-		})
-	}
-	//查询用户信息方法
-	function doSearch() {
-		$.hori.showLoading();
-		try {
-			var random = new Date().getTime();
-			var url = $.hori.getconfig().appServerHost
-					+ "view/guide/getInfo/getUserinfo/";
-			url = url + "?data-random=" + random + "&data-result=text";
-		} catch (e) {
-		}
-		$.hori.ajax({
-			"type" : "post",
-			"url" : url,
-			"data" : $("#forgetPwdForm").serialize(),
-			"success" : function(res) {
-				alert(res);
-				var jdata = JSON.parse(res);
-				document.getElementById("Mobile_number").value=jdata.mobile_number;
-				reset();
-				if (jdata.rtn_code && jdata.rtn_code == "2000") { //判断是否正确返回 
-				} else { //未正确查询到结果
-					alert(jdata.rtn_msg);
+				console.log("resetPwd=="+res);
+				var result= JSON.parse(res);
+			    if(result.rtn_code == 2000){
+			    	var num = result.mobile_number;
+			    	alert("密码重置成功，新密码已发送到" + num.substring(0,4) + "****" + num.substring(7));
+			    }
+				else{
+					alert(result.rtn_msg); 
 				}
 			},
 			"error" : function(res) {
-				alert("查询失败：" + res);
+				alert(res);
 				$.hori.hideLoading();
 			}
 		})
-		
 	}
 </script>
 </head>
@@ -148,14 +138,13 @@ a {
 						<table style="width: 100%" cellspaceing="0" cellpadding="0"
 							border="0">
 							<tr>
-								<td><strong>帐&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号:</strong>
+								<td><strong>用&#160;&#160;户&#160;&#160;名:</strong>
 								</td>
-								<td><input type="hidden" id="Okey" name="Okey" value="Fwad1Zfv8XnXHoEDkOjSX2XldzwNnG72"/>
-								<input type="hidden" id="Mobile_number" name="Mobile_number" value=""/>
+								<td><input type="hidden" id="okey" name="okey" value="Fwad1Zfv8XnXHoEDkOjSX2XldzwNnG72"/>
+								<input type="hidden" id="mobile_number" name="mobile_number" value=""/>
 								<input type="text" name="user_name"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="user_name" value="geyuxi" onfocus="clearData()"
-									onblur="showTips()" /></td>
+									id="user_name" value="" /></td>
 							</tr>
 						</table>
 					</li>
@@ -167,7 +156,7 @@ a {
 								</td>
 								<td><input type="text" name="cn_name"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="cn_name" value="葛玉喜" /></td>
+									id="cn_name" value="" /></td>
 							</tr>
 						</table>
 					</li>
@@ -178,7 +167,7 @@ a {
 								<td><strong>身份证号:</strong></td>
 								<td><input type="text" name="id_number"
 									style="outline: none; width: 100%; border: 0; background: transparent;"
-									id="id_number" value="220882198401195538" /></td>
+									id="id_number" value="" /></td>
 							</tr>
 						</table>
 					</li>
@@ -186,8 +175,8 @@ a {
 						<table style="width: 100%" cellspaceing="0" cellpadding="0"
 							border="0">
 							<tr>
-								<td><strong>验证码&#160;&#160;&#160;&#160;:</strong></td>
-								<td><input type="text" name="imageCode" id="imageCode"
+								<td><strong>验&#160;&#160;证&#160;&#160;码:</strong></td>
+								<td><input type="text" name="secret_key" id="secret_key"
 									style="width: 80px;" /></td>
 								<td><a data-role="button" href="javascript:void(0)"
 									data-theme="f" data-mini="true" onclick="getCaptcha();">获取验证码</a>
@@ -196,23 +185,17 @@ a {
 						</table>
 					</li>
 				</ul>
-			</form>
-			<div class="ui-grid-d">
-				<div class="ui-block-a"></div>
-				<div class="ui-block-b"></div>
-				<div class="ui-block-c" style="width: 200px;">
-					<a href="javascript:void(0)" onclick="doSearch()" data-theme="f"
+			</form><br/><br/>
+			<div style="max-width: 250px;">
+					<a href="javascript:void(0)" onclick="reset()" data-theme="f"
 						data-role="button" data-icon="false">重置密码</a>
-				</div>
-				<div class="ui-block-d"></div>
-				<div class="ui-block-e"></div>
 			</div>
-
-			<div
-				style="max-width: 400px; background-color: #ADADAD; display: none;"
+			
+			<!-- <div
+				style="max-width: 400px; background-color: #ADADAD; display: none;" id="div_hidden"
 				border="1px">
 				<p>密码重置成功，新密码已发送到188****8890
-			</div>
+			</div> -->
 
 
 		</div>
