--- a/html/annouceList.html
+++ b/html/annouceList.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>代办</title>
+	<title>通知公告</title>
 	<!-- <base href="http://192.168.1.110:90/" /> -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0"/>
