* 修改打包脚本 * 修改下载地址信息

--- a/html/appdown.html
+++ b/html/appdown.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>在线安装 </title> 
+	<title>移动办公在线安装</title> 
 	
 	<link rel="stylesheet" href="/view/lib/jquery-mobile/jquery.mobile.min.css" /> 
 	
@@ -28,10 +28,13 @@
 		<ul data-role="listview">
 			<li data-role="list-divider">Android Client</li>
 			
-			<li><a href="http://192.168.1.110:90/download/mobile/android"  target="_blank" >安卓在线安装 </a></li>
+			<li><a href="http://10.1.31.177/download/mobile/android"  target="_blank" >安卓手机版移动办公</a></li>
+			<li><a href="http://10.1.31.177/download/pad/android"  target="_blank" >安卓PAD版移动办公</a></li>
 			<li data-role="list-divider">IOS Client</li>
 			
-			<li><a id="aIosInstall" target="_self"  href="itms-services://?action=download-manifest&url=https://dn-horitech.qbox.me/manifest_demo.plist" >苹果在线安装</a></li>
+			<!--<li><a id="aIosInstall" target="_self"  href="itms-services://?action=download-manifest&url=https://dn-horitech.qbox.me/manifest_demo.plist" >苹果在线安装</a></li>-->
+			<li><a id="aIosInstall" target="_self"  href="itms-services://?action=download-manifest&amp;url=https://dn-horitech.qbox.me/manifest_gene_demo.plist" >苹果手机版移动办公</a></li>
+			
 			
 		</ul>
 	
@@ -41,7 +44,7 @@
 	</div><!-- /content -->
 
 	<div data-role="footer" class="footer-docs" data-theme="c">
-			<p>&copy; 2012-09 HoriMobile</p>
+			<p>&copy; 2014-11 Genertec</p>
 	</div>
 
 	</div><!-- /page -->
