--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -50,6 +50,7 @@
                 var skey = $("#searchKey").val();
                 if(skey == null || skey.length == 0){
     				alert("关键词不能为空！");
+    				 $.hori.hideLoading();
     				return;
     			} 
                 //skey = encodeURI(skey);
