* 取消错误提示信息注释

--- a/html/guide.html
+++ b/html/guide.html
@@ -87,7 +87,7 @@ div p {
 							$("#guide").show();
 							render(data);
 						} else { //未正确查询到结果
-							//alert(jdata.rtn_msg);
+							alert(jdata.rtn_msg);
 						}
 
 					},
