首页 最左侧div不同pad 显示效果统一  风险状况位置调整

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -37,9 +37,9 @@ text-indent:0em;
 <body class="ui-mobile-viewport ui-overlay-c"
 	style="overflow-y: hidden;">
 	<div class="container_12" style="width: 100%;position:relative">
-		<div class="grid_2"  >
-			<ul data-inset="true" id="ul"
-				class="ui-listview ui-listview-inset ui-corner-all ui-shadow"  >
+		<div class="grid_2"  style='overflow:hidden; '>
+			<ul data-inset="true" id="ul" 
+				class="ui-listview ui-listview-inset ui-corner-all "  >
 				<li data-corners="false" data-shadow="false" data-wrapperels="div"
 					data-theme="c"
 					class="ui-btn 
@@ -138,7 +138,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div class="" id="rightContent" style="overflow: scroll;position:relative; height: 29.5em;margin-top:3%; position: fixed ;top: 7%;right:5px;">
+		<div class="" id="rightContent" style="overflow: scroll;height:29.5em;position:relative; margin-top:3%; position: fixed ;top: 7%;right:5px;">
 			
 		</div>
 	</div>
