修改首页图标的margin-bottom值

--- a/html/home2.html
+++ b/html/home2.html
@@ -37,10 +37,12 @@
 	.imgToDo {
 		width: 5.5em;
 		height:5.5em;
+		margin-bottom: 30px;
 	}
 	.divxs {
 		width: 33.333%;
-		margin-top: 20px
+		margin-top: 20px;
+		margin-bottom: 15px;
 	}
 }
 
