点击进入首页标题添加

--- a/html/aqscList.html
+++ b/html/aqscList.html
@@ -95,9 +95,9 @@
 					onclick="doSearch()" data-rel="dialog" data-corners="true"
 					data-shadow="true" data-iconshadow="true" data-wrapperels="span"
 					data-theme="f"
-					class="ui-btn ui-shadow ui-btn-corner-all ui-btn-inline ui-btn-up-c ui-btn-up-f">
-						<span class="ui-btn-inner" style="width: 45px; height: 20px;"><span
-							class="ui-btn-text" style="color: white">搜索</span></span>
+					class=" ui-btn-up-f">
+						<span  style="width: 42px; height: 20px;"><span
+							 style="color: white">搜索</span></span>
 				</a></td>
 			</tr>
 		</table>
