BI多余代码删除

--- a/html/bi.html
+++ b/html/bi.html
@@ -4,6 +4,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1.0" />
 </head>
+<script src="asset/js/echarts-plain-original.js"></script>
 <style>
 #loadBi{
 margin-left: 0px;
