安全生产引入js

--- a/html/listDetailsForAQSC.html
+++ b/html/listDetailsForAQSC.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet"
 	href="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.css" />
 <link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" />
-<script src="../lib/jquery/jquery.min.js"></script>
+<link href="../lib/jquery-mobile/jquery-mobile-fluid960.css"
+	rel="stylesheet" />
+<script src="../lib/jquery-mobile/jquery.mobile-latest/jquery.mobile.min.js"></script>
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
