修正忘记密码和登录向导中旋转条不消失的问题

--- a/html/forgetPwd.html
+++ b/html/forgetPwd.html
@@ -116,6 +116,7 @@ a {
 				else{
 					alert(result.rtn_msg); 
 				}
+			    $.hori.hideLoading();
 			},
 			"error" : function(res) {
 				alert(res);
