--- a/html/bi/srlr.html
+++ b/html/bi/srlr.html
@@ -13,7 +13,7 @@
 <script src="../../lib/json/json2.js"></script>
 <script src="../../lib/hori/hori.js?tag=21369"></script>
 <script src="../../lib/jquery-mobile/jquery.mobile.min.js"></script>
-<script src="../asset/js/echarts-plain-original.js"></script>
+<script src="../asset/js/echarts-plain.js"></script>
 <script src="../../config/web/config.js"></script>
 <style>
 a {
